/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option cc_enable_arenas = true;
option java_package = "ai.nuralogix.dfx.studyassets.v1";
option java_outer_classname = "StudyAssets";
option go_package = "bitbucket.org/nuralogix/dfx-protobuffs-go/dfx/studyassets/v1;studyassets";
option csharp_namespace = "Nuralogix.Dfx.StudyAssets.V1";

package dfx.studyassets.v1;

service API {
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/studyassets"
      body: "*"
    };
  }
  rpc List (ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/v1/studyassets"
    };
  }
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {
    option (google.api.http) = {
      get: "/api/v1/studyassets/{id}"
    };
  }
  rpc RetrieveMultiple (RetrieveMultipleRequest) returns (RetrieveMultipleResponse) {
    option (google.api.http) = {
      post: "/api/v1/studyassets/retrieve-multiple"
      body: "*"
    };
  }
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v1/studyassets/{id}"
      body: "*"
    };
  }
  rpc Remove (RemoveRequest) returns (RemoveResponse) {
    option (google.api.http) = {
      delete: "/api/v1/studyassets/{id}"
    };
  }
}

// Create
message CreateRequest {
  string study_template_id = 1;
  string sdk_id = 2;
  bytes lua = 3;
}
message CreateResponse {
  string id = 1;
}

// List
message ListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string study_template_id = 3;
  string sdk_id = 4;
}
message ListResponse {
  message StudyAsset {
    string id = 1;
    string study_template_id = 2;
    string sdk_id = 3;
  }
  uint32 total = 1;
  repeated StudyAsset study_assets = 2;
}

// Retrieve
message RetrieveRequest {
  string id = 1;
}
message RetrieveResponse {
  StudyAsset study_asset = 1;
}

// RetrieveMultiple
message RetrieveMultipleRequest {
  repeated string ids = 1;
}
message RetrieveMultipleResponse {
  repeated StudyAsset study_assets = 1;
}

// Update
message UpdateRequest {
  string id = 1;
  string study_template_id = 2;
  string sdk_id = 3;
  bytes lua = 4;
}
message UpdateResponse {}

// Remove
message RemoveRequest {
  string id = 1;
}
message RemoveResponse {}

// StudyAsset object being used in Retrieve RetrieveMultiple, and Update EPs
message StudyAsset {
  string id = 1;
  string study_template_id = 2;
  string sdk_id = 3;
  bytes lua = 4;
  google.protobuf.Timestamp created = 5;
  google.protobuf.Timestamp updated = 6;
}