/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
syntax = "proto3";

import "google/api/annotations.proto";

option cc_enable_arenas = true;
option java_package = "ai.nuralogix.dfx.studytemplates.v1";
option java_outer_classname = "StudyTemplates";
option go_package = "bitbucket.org/nuralogix/dfx-protobuffs-go/dfx/studytemplates/v1;studytemplates";
option csharp_namespace = "Nuralogix.Dfx.StudyTemplates.V1";

package dfx.studytemplates.v1;

service API {
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/studytemplates"
      body: "*"
    };
  }
  rpc Remove (RemoveRequest) returns (RemoveResponse) {
    option (google.api.http) = {
      delete: "/api/v1/studytemplates/{id}"
    };
  }
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v1/studytemplates/{id}"
      body: "*"
    };
  }
  rpc List (ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/v1/studytemplates"
    };
  }   
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {
    option (google.api.http) = {
      get: "/api/v1/studytemplates/{id}"
    };
  }
  rpc RetrieveMultiple (RetrieveMultipleRequest) returns (RetrieveMultipleResponse) {
    option (google.api.http) = {
      post: "/api/v1/studytemplates/retrieve-multiple"
      body: "*"
    };
  }
}

enum Status {
  UNKNOWN_STUDY_TEMPLATE_STATUS = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  DELETED = 3;
  EXPIRED = 4;
}

// StudyType indicating the study type for the template
enum StudyType {
  UNKNOWN_STUDY_TYPE_ID = 0;
  GENERAL = 1;
  HEALTH = 2;
  EMOTION = 3;
  FINTECH = 4;
  DECEPTION = 5;
  MARKETING = 6;
  CONSUMER = 7;
  GAMING = 8;
  INSURANCE = 9;
  SAFETY = 10;
  MEDIA = 11;
}

// Create
message CreateRequest {
  string id = 1;
  StudyTemplate study_template = 2;
}
message CreateResponse {}

// Remove
message RemoveRequest {
  string id = 1;
}
message RemoveResponse {}

// Update
message UpdateRequest {
  string id = 1;
  StudyTemplate study_template = 2;
}
message UpdateResponse {}

// List
message ListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}
message ListResponse{
  message StudyTemplate {
    string id = 1;
    string name = 2;
    Status status = 3;
  }
  uint32 total = 1;
  repeated StudyTemplate study_templates = 2;
}

// Retrieve
message RetrieveRequest {
  string id = 1;
}
message RetrieveResponse {
  StudyTemplate study_template = 1;
}

// RetrieveMultiple
message RetrieveMultipleRequest {
  repeated string ids = 1;
}
message RetrieveMultipleResponse {
  // map[study_template_id] -> StudyTemplate object
  map<string, StudyTemplate> study_templates = 1;
}

// StudyTemplate object being used in multiple endpoints
message StudyTemplate {
  StudyType study_type = 1;
  Status status = 2;
  string name = 3;
  string description = 4;
}
 